Tab not fixed, it still jumps. "The "Review Form Settings" panel still jumps out of position to the left when the tab is clicked. All the other panels are in the same position. Click through them and you will see."

--- a/assets/css/ctrw-frontend.css
+++ b/assets/css/ctrw-frontend.css
@@ -63,7 +63,7 @@ h3 {
         .rating label {
             cursor: pointer;
             transition: color 0.2s;
-            font-size: 24px;;
+            font-size: 32px;
         }
 
         .review-author{
